<resources>
    <string name="app_name">Here MSS</string>
    <string name="gazelle">Газель</string>
    <string name="gazelle_tent">Газель тент (до 1,6м)</string>
    <string name="gazelle_thermos">Газель термос/будка</string>
    <string name="gazelle_height">Газель высокая (от 1,8м)</string>
    <string name="gazelle_board">Газель борт</string>
    <string name="gazelle_farmer">Газель фермер</string>
    <string name="gazelle_ref">Газель рефрижератор</string>
    <string name="gazelle_pyramid">Газель пирамида</string>
    <string name="gazelle_towing">Буксировка до 3,5т</string>
    <string name="gazelle_long">Удлененная Газель</string>
    <string name="gazelle_long_original">Удлененная Газель до 1,8м</string>
    <string name="gazelle_long_board">Удлененная Газель борт</string>
    <string name="gazelle_long_farmer">Удлененная Газель фермер</string>
    <string name="gazelle_long_ref">Удлененная Газель рефрижератор</string>
    <string name="gazelle_long_pyramid">Удлененная Газель пирамида</string>
    <string name="gazelle_long_height">Удлененная Газель кубатурная от 1,8м</string>
    <string name="gazelle_long_long">Удлененная Газель длинна свыше 5,5–6м</string>
    <string name="ton_2">2-х тонник</string>
    <string name="ton_2_original">2-х тонник закрытый</string>
    <string name="ton_2_board">2-х тонник борт</string>
    <string name="ton_2_farmer">2-х тонник фермер</string>
    <string name="ton_2_ref">2-х тонник рефрижератор</string>
    <string name="ton_2_pyramid">2-х тонник пирамида</string>
    <string name="ton_2_height">2-х тонник кубатурный от 1,8м</string>
    <string name="ton_2_long">2-х тонник длинна свыше 5,5–6м</string>
    <string name="ton_3">3-х тонник</string>
    <string name="ton_3_original_mini">3-х тонник до 19куб</string>
    <string name="ton_3_original_maxi">3-х тонник от 20 куб</string>
    <string name="ton_3_board">3-х тонник борт</string>
    <string name="ton_3_farmer">3-х тонник фермер</string>
    <string name="ton_3_ref">3-х тонник рефрижератор</string>
    <string name="ton_3_multi_ref">3-х тонник мультирежим</string>
    <string name="ton_3_pyramid">3-х тонник пирамида</string>
    <string name="ton_3_long">3–х тонник длина свыше 5–6м</string>
    <string name="ton_5">5-и тонник</string>
    <string name="ton_5_mini">5-и тонник до 25куб</string>
    <string name="ton_5_medium">5–и тонник 26–35куб</string>
    <string name="ton_5_maxi">5-и тонник до 45куб</string>
    <string name="ton_5_board">5-и тонник борт</string>
    <string name="ton_5_ref_mini">5-и тонник рефрижератор до 25куб</string>
    <string name="ton_5_ref_maxi">5-и тонник рефрижератор до 35куб</string>
    <string name="ton_7">7-и тонник</string>
    <string name="ton_7_min">7-и тонник до 39куб</string>
    <string name="ton_7_max">7-и тонник до 50 куб</string>
    <string name="ton_7_board">7-и тонник борт</string>
    <string name="ton_7_ref_min">7-и тонник рефрижератор до 39куб</string>
    <string name="ton_7_ref_max">7-и тонник рефрижератор до 50куб</string>
    <string name="ton_10">10-и тонник</string>
    <string name="ton_10_min">10-и тонник до 44куб</string>
    <string name="ton_10_max">10-и тонник до 60куб</string>
    <string name="ton_10_board">10-и тонник борт</string>
    <string name="ton_10_ref_min">10-и тонник рефрижератор до 44куб</string>
    <string name="ton_10_ref_max">10-и тонник рефрижератор до 60куб</string>
    <string name="enter_start_address">Введите адрес погрузки</string>
    <string name="enter_destination_address">Введите адрес разгрузки</string>
    <string name="clean">Очистить</string>
    <string name="add_address">+адрес</string>
    <string name="count">Рассчитать</string>
    <string name="search">Поиск</string>
</resources>
