<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame">

    <com.here.sdk.mapviewlite.MapViewLite
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.here.sdk.mapviewlite.MapViewLite>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_below="@+id/ad_view_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="@+id/ad_view_container"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ad_view_container" />

    <Button
        android:id="@+id/searchBtn2"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_below="@+id/searchBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/ad_view_container"
        android:layout_alignParentTop="@+id/ad_view_container"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_toEndOf="@+id/searchBtn"
        android:background="@android:color/white"
        android:hint="@string/enter_start_address"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/ad_view_container"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_toEndOf="@+id/searchBtn2"
        android:background="@android:color/white"
        android:hint="@string/enter_destination_address"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/searchBtn2"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:autofillHints="" />

    <Button
        android:id="@+id/routBtn"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/searchBtn2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:onClick="addRouteButtonClicked"
        android:text="@string/count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/editText2"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/clean"
        android:onClick="addWaypointsButtonClicked"
        android:text="@string/add_address"
        app:layout_constraintStart_toEndOf="@+id/clean"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/clean"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/editText2"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/routBtn"
        android:onClick="clearMapButtonClicked"
        android:text="@string/clean"
        app:layout_constraintStart_toEndOf="@+id/routBtn"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

</RelativeLayout>